--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.home {
+    font-size: 3rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+style.css .carousel-item {
+    height: 32rem;
+    background: #777;
+    color: white;
+    position: relative;
+}
+
+.container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 50px;
+}
+
+.ng2-custom-carousel-container {
+    width: 100%;
+    margin: auto;
+}
+
+.ng2-custom-carousel-element {
+    padding: 0;
+    width: 300px;
+    height: 300px;
+    background-color: crimson;
+    color: #fff;
+    font-size: 50px;
+    line-height: 300px;
+    text-align: center;
+}
+
+.mat-expansion-panel-header-title {
+    justify-content: center;
+    background-color: #7e9892;
+    border-radius: 15px;
+    padding: 10px 25px;
+    color: #fff;
+}
+.mat-expansion-panel-header {
+    padding-bottom: 20px !important;
+    border-radius: 10px !important;
+}
+.mat-accordion .mat-expansion-panel:first-of-type {
+    border-radius: 10px !important;
+}
+
+
